--- a/TCC/Views/ChoicePage.xaml
+++ b/TCC/Views/ChoicePage.xaml
@@ -2,32 +2,25 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TCC.Views.ChoicePage"
-             Title="ChoicePage"
-             BackgroundColor="#e86464">
+             Title="ChoicePage">
+
 
     <Grid>
-        <!-- Ondas decorativas no fundo -->
-        <Path Fill="#e04141"
-              Opacity="1"
-              Data="M0,40 
-                    C200,0 600,100 1000,40 
-                    L1000,0 L0,0 Z"
-              HorizontalOptions="FillAndExpand"
-              VerticalOptions="Start"
-              Aspect="Fill" />
+    <!-- Imagem de fundo -->
+    <Image Source="fundo_tcc.jpg"
+               Aspect="AspectFill"
+               HorizontalOptions="FillAndExpand"
+               VerticalOptions="FillAndExpand" />
 
-        <Path Fill="#5c0e0e"
-              Opacity="0.25"
-              Data="M0,800 L1000,800 
-                    L1000,760 
-                    Q700,720 500,740 
-                    Q300,760 0,730 
-                    Z"
-              HorizontalOptions="FillAndExpand"
-              VerticalOptions="End"
-              Aspect="Fill" />
+    <!-- Overlay semi-transparente (opcional para melhorar legibilidade) -->
+    <BoxView Color="Black" 
+                 Opacity="0.3"
+                 HorizontalOptions="FillAndExpand"
+                 VerticalOptions="FillAndExpand" />
 
-        <!-- Conteúdo principal -->
+
+
+    <!-- Conteúdo principal -->
         <VerticalStackLayout Spacing="40"
                              Padding="0"
                              VerticalOptions="Center"
