--- a/TCC/Views/DriverEditPage.xaml
+++ b/TCC/Views/DriverEditPage.xaml
@@ -7,7 +7,7 @@
              Title="Editar Perfil"
              BackgroundColor="#F5F5F5">
 
-    <ScrollView BackgroundColor="Lime">
+    <ScrollView>
         <VerticalStackLayout Spacing="0">
 
             <!-- Cabeçalho - Full Width -->
