--- a/TCC/Views/Home.xaml
+++ b/TCC/Views/Home.xaml
@@ -2,33 +2,22 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TCC.Views.Home"
-             Title="Home"
-             BackgroundColor="#e86464">
+             Title="Home">
 
 
     <Grid>
+        <!-- Imagem de fundo -->
+        <Image Source="fundo_tcc.jpg"
+               Aspect="AspectFill"
+               HorizontalOptions="FillAndExpand"
+               VerticalOptions="FillAndExpand" />
 
-        <!-- Ondas decorativas no fundo -->
-        <!-- Onda 1 -->
-        <Path Fill="#e04141"
-        Opacity="1"
-        Data="M0,40 
-            C200,0 600,100 1000,40 
-            L1000,0 L0,0 Z"
-        HorizontalOptions="FillAndExpand"
-        VerticalOptions="Start"
-        Aspect="Fill" />
-                <!-- Onda 1 -->
-                <Path Fill="#5c0e0e"
-        Opacity="0.25"
-        Data="M0,800 L1000,800 
-            L1000,760 
-            Q700,720 500,740 
-            Q300,760 0,730 
-            Z"
-        HorizontalOptions="FillAndExpand"
-        VerticalOptions="End"
-        Aspect="Fill" />
+        <!-- Overlay semi-transparente (opcional para melhorar legibilidade) -->
+        <BoxView Color="Black" 
+                 Opacity="0.3"
+                 HorizontalOptions="FillAndExpand"
+                 VerticalOptions="FillAndExpand" />
+
 
 
         <!-- Conteúdo principal -->
