--- a/TCC/Views/ChoosePageDriver.xaml
+++ b/TCC/Views/ChoosePageDriver.xaml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TCC.Views.ChoosePageDriver"
-             Title="Menu do Motorista">
+             x:Class="TCC.Views.ChoosePageDriver">
 
     <Grid>
         <!-- Imagem de fundo -->
