--- a/TCC/Views/DriverEditPage.xaml
+++ b/TCC/Views/DriverEditPage.xaml
@@ -4,7 +4,8 @@
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:behaviors="clr-namespace:TCC.Behaviors"
              x:Class="TCC.Views.DriverEditPage"
-             BackgroundColor="#F5F5F5">
+             BackgroundColor="#F5F5F5"
+             Shell.NavBarIsVisible="False">
 
     <ScrollView>
         <VerticalStackLayout Spacing="0">
