--- a/TCC/Views/GroupViewPage.xaml
+++ b/TCC/Views/GroupViewPage.xaml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TCC.Views.GroupViewPage">
+             x:Class="TCC.Views.GroupViewPage"
+             Shell.NavBarIsVisible="False">
 
     <Grid RowDefinitions="*,Auto" Padding="10">
 
