--- a/TCC/Views/Index.xaml
+++ b/TCC/Views/Index.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TCC.Views.Index"
-             BackgroundColor="#F8F9FA">
+             BackgroundColor="#F8F9FA"
+             Shell.NavBarIsVisible="False">
 
     <ScrollView>
         <VerticalStackLayout Spacing="0">
