--- a/TCC/Views/LoginPage.xaml
+++ b/TCC/Views/LoginPage.xaml
@@ -1,7 +1,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TCC.Views.LoginPage"
-             BackgroundColor="White">
+             BackgroundColor="White"
+             Shell.NavBarIsVisible="False">
 
     <ScrollView>
         <VerticalStackLayout>
