--- a/TCC/Views/PassengerEditPage.xaml
+++ b/TCC/Views/PassengerEditPage.xaml
@@ -4,7 +4,8 @@
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:behaviors="clr-namespace:TCC.Behaviors"
              x:Class="TCC.Views.PassengerEditPage"
-             BackgroundColor="White">
+             BackgroundColor="White"
+             Shell.NavBarIsVisible="False">
 
     <ScrollView>
         <VerticalStackLayout Spacing="0">
