--- a/TCC/Views/ViagemPage.xaml
+++ b/TCC/Views/ViagemPage.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:esri="clr-namespace:Esri.ArcGISRuntime.Maui;assembly=Esri.ArcGISRuntime.Maui"
              x:Class="TCC.Views.ViagemPage"
-             BackgroundColor="#F5F5F5">
+             BackgroundColor="#F5F5F5"
+             Shell.NavBarIsVisible="False">
 
     <Grid>
         <Grid.RowDefinitions>
